--- a/home.html
+++ b/home.html
@@ -176,7 +176,18 @@
 		<div>
 			<img src="" alt="">
 		</div>
-		<div class="intro-text2"><h2 style="text-align: justify;  margin: 15px 20px">CONATCT OUR TEAM FOR ANY QUERIES</h2>
+		<h2 style="text-align: justify;  margin: 15px 20px">Delivery Dervice Recruitment :</h2>
+		<div class="event-div container">
+			
+				<img src="assets/delivery.jpg" alt=""  width="100%" height="1000px">
+		</div>
+		<div class="intro-text" style="margin: 50px 0;">
+			<h3 style="text-align: center; color: white; margin: 15px 10px">
+				Fill The Below Form To Apply .
+			</h3>
+			
+		</div>
+		<div class="intro-text2"><h2 style="text-align: justify;  margin: 15px 20px">Send Us Your Details And We will Contact You.</h2>
 		<center>
 			<embed src="https://chilipepper.io/form/hot-yellow-anaheim-65e9348d-530e-420c-af63-5e2e938b1c6d" type="text/html" height="550px">
 			
@@ -186,7 +197,7 @@
 			YOU WANT IT? <br>WE PROVIDE IT
 		</h3>
 		<p style="text-align: justify; color: white; margin: 15px 10px;  font-size: 20px;">
-			Our responsibility is to serve you, we re extreamly happy for choosing us.
+			Our responsibility is to serve you, we are extreamly happy for choosing us.
 		</p>
 		<center>
 			<table border="1px" width="60%" style="margin: 40px;">
