--- a/home.html
+++ b/home.html
@@ -176,7 +176,7 @@
 		<div>
 			<img src="" alt="">
 		</div>
-		<h2 style="text-align: justify;  margin: 15px 20px">Delivery Dervice Recruitment :</h2>
+		<h2 style="text-align: justify;  margin: 15px 20px">Delivery Service <br> Recruitment :</h2>
 		<div class="event-div container">
 			
 				<img src="assets/delivery.jpg" alt=""  width="100%" height="1000px">
