--- a/home.html
+++ b/home.html
@@ -348,7 +348,7 @@
 			</div>
 		</div>
 	</div>
-	<section class="footer" style="display: flex">
+	<section class="footer">
 		<div class="footer-div1" width="50%">
 			<!-- <ul>
 				<li><a href="">Logo</a></li>
